syntax = "proto3";

package rpcServer;

service Greeter {

  rpc GetBlank(BlankRequest) returns (BlankReply) {}

}

message BlankRequest {
  string name = 1;
}

message BlankReply {
  string message = 1;  
}
